carousel dot overlapping issue updated pading to 30px

--- a/assets/css/slick.css
+++ b/assets/css/slick.css
@@ -92,7 +92,7 @@
 }
 
 .uagb-slick-carousel {
-	padding: 45px;
+	padding: 30px;
 }
 
 .uagb-slick-carousel .slick-prev,
