--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -287,7 +287,6 @@
 }
 
 .uagb-slick-carousel {
-	padding: 0;
 
 	.is-carousel {
 		padding: 0;
